Scrollbar colour fixes in dark mode

--- a/packages/ag-charts-website/src/design-system/_base.scss
+++ b/packages/ag-charts-website/src/design-system/_base.scss
@@ -63,16 +63,6 @@ html {
     #doc-content a:hover {
         color: var(--link-hover-color);
     }
-
-    nav::-webkit-scrollbar {
-        background-color: var(--background-100);
-    }
-
-    nav::-webkit-scrollbar-thumb {
-        background-color: #354856;
-        border-radius: 10px;
-        border: 4px solid #0a161f;
-    }
 }
 
 #{$darkmode-selector} {
@@ -89,7 +79,7 @@ html {
     }
 
     aside::-webkit-scrollbar {
-        background-color: var(--background-100);
+        background-color: var(--dark-bg-new);
     }
 
     aside::-webkit-scrollbar-thumb {
